update Introduction and About Me

--- a/index.html
+++ b/index.html
@@ -1,56 +1,86 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8" />
-    <!-- This meta tag sets the viewport properties for a responsive site. 
-    It ensures that the width of the page is set to the width of the device, 
-    and the initial zoom level is set to 1.0 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> Josue Castellanos Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link   
-        href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css"
-        rel="stylesheet"
-    />
-</head>
-<body>
-    <div class="main">
-        <div class="sidemenu">
-            <div class="avatar--cover">
-                <img src="/images/avatar.png" alt="" />
-            </div> 
-            <h3 class="name">Josue Castellanos</h3>
-            <p class="position">Software Engineer and Developer</p>
-            <div class="social--icons">
-                <a href="#" class="social--icon">
-                    <i class="ri-linkedin-fill"></i>
-                </a>
-                <a href="#" class="social--icon">
-                    <i class="ri-github-fill"></i>
-                </a>
-            </div>
-            <div class="btn"> Hire Me</div>
-            <div class="btn--line"> Download CV</div>
-        </div>
-        <div class="main--content">
-            <div class intro="intro">
-                <div class="container">
-                    <div class="top--title"></div>
-                    <h1>Hi I'm <span>Josue</span>, 
-                        <br><span class="skills"></span></h1>
-                    <p> I am actively engaged in options trading, demonstrating analytical skills, risk management, and strategic decision-making in financial markets.</p>
-                    <br>
+    <head>
+        <meta charset="UTF-8" />
+        <!-- This meta tag sets the viewport properties for a responsive site. 
+        It ensures that the width of the page is set to the width of the device, 
+        and the initial zoom level is set to 1.0 -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title> Josue Castellanos Portfolio</title>
+        <link rel="stylesheet" href="styles.css" />
+        <link   
+            href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <div class="main">
+            <div class="sidemenu">
+                <div class="avatar--cover">
+                    <img src="/images/avatar.png" alt="" />
+                </div> 
+                <h3 class="name">Josue Castellanos</h3>
+                <p class="position">Software Engineer and Developer</p>
+                <div class="social--icons">
+                    <a href="#" class="social--icon">
+                        <i class="ri-linkedin-fill"></i>
+                    </a>
+                    <a href="#" class="social--icon">
+                        <i class="ri-github-fill"></i>
+                    </a>
                 </div>
-            <div class intro="about"><div class="container">about</div></div>
-            <div class intro="resume"><div class="container"> resume</div></div>
-            <div class intro="projects"><div class="container"> projects</div></div>
-            <div class intro="my--skills"><div class="container"> my skills</div></div>
-            <div class intro="portfolio"><div class="container"> portfolio</div></div> 
-            <div class intro="contact"><div class="container"> contact</div></div> 
+                <div class="btn"> Hire Me</div>
+                <div class="btn--line"> Download CV</div>
+            </div>
+            <div class="main--content">
+                <div class intro="intro">
+                    <div class="container">
+                        <div class="top--title">introduce</div>
+                        <h1>
+                            I'm Josue, <br/><span class="skills"></span>
+                        </h1>
+                        <p> 
+                            I'm actively engaged in options trading, demonstrating analytical skills, risk management, and strategic decision-making in financial markets.
+                        </p>
+                    </div>
+                <div class intro="about">
+                    <div class="container">
+                        <div class="top--title">about</div>
+                        <h2 class="title">
+                            Math is my <span>Passion</span><br/> Engineering is my <span>Profession</span>
+                        </h2>
+                        <p>
+                            My journey to pursue higher education amidst the COVID-19 pandemic, reignited my passion for
+                            learning and led me to discover my interest in software engineering. I'm drawn to the field
+                            because of its potential to create positive change and innovate solutions to complex problems.
+                            My transition from a unionized carpentry trade to computer science reflects my strong drive for
+                            excellence and adaptability to new challenges.
+                        </p>
+                    </div>
+                </div>
+                <div class intro="resume">
+                    <div class="container">
+                        <div class="top--title">resume</div>
+                        <h2 class="title">Education & <span>Experience</span></h2>
+                        <div>
+                            <div class="experience">
+                                <p class="date">2021 - present</p>
+                                <h3>California State University, East Bay</h3>
+                                <p class="company">B.S. in Computer Science</p>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class intro="projects"><div class="container"><div class="top--title">projects</div></div></div>
+                <div class intro="my--skills"><div class="container"><div class="top--title">my skills</div></div></div>
+                <div class intro="portfolio"><div class="container"><div class="top--title">portfolio</div></div></div> 
+                <div class intro="contact"><div class="container"><div class="top--title">contact</div></div></div> 
+                </div>
+            </div>
         </div>
-    </div>
-    </html>
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script src="script.js"></script>
-</body>
+        <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+        <script src="script.js"></script>
+    </body>
 </html>
