--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <!-- This meta tag sets the viewport properties for a responsive site. 
-        It ensures that the width of the page is set to the width of the device, 
-        and the initial zoom level is set to 1.0 -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title> Josue Castellanos Portfolio</title>
         <link rel="stylesheet" href="styles.css" />
@@ -17,15 +14,15 @@
         <div class="main">
             <div class="sidemenu">
                 <div class="avatar--cover">
-                    <img src="/images/avatar.png" alt="" />
+                    <img src="/img/avatar.png" alt="" />
                 </div> 
                 <h3 class="name">Josue Castellanos</h3>
                 <p class="position">Software Engineer and Developer</p>
                 <div class="social--icons">
-                    <a href="#" class="social--icon">
+                    <a href="https://www.linkedin.com/in/castellanos-josue/" target="_blank" class="social--icon">
                         <i class="ri-linkedin-fill"></i>
                     </a>
-                    <a href="#" class="social--icon">
+                    <a href="https://github.com/Josue-Castellanos" target="_blank" class="social--icon">
                         <i class="ri-github-fill"></i>
                     </a>
                 </div>
@@ -33,17 +30,21 @@
                 <div class="btn--line"> Download CV</div>
             </div>
             <div class="main--content">
-                <div class intro="intro">
+                <div class="intro">
                     <div class="container">
                         <div class="top--title">introduce</div>
                         <h1>
-                            I'm Josue, <br/><span class="skills"></span>
+                            I'm Josue, <br/><span class="_skills"></span>
                         </h1>
-                        <p> 
-                            I'm actively engaged in options trading, demonstrating analytical skills, risk management, and strategic decision-making in financial markets.
+                        <p>
+                            Future graduate from California State University seeking internship or entry-level position as software engineer.
                         </p>
+                        <p>
+                            Actively engaged in options trading, demonstrating analytical skills, risk management, and strategic decision-making in financial markets.
+                        </p> 
+                        <p>Proud father of 2 daughters fostering a balance and fulfilling life outside of work.</p>
                     </div>
-                <div class intro="about">
+                <div class="about">
                     <div class="container">
                         <div class="top--title">about</div>
                         <h2 class="title">
@@ -54,11 +55,11 @@
                             learning and led me to discover my interest in software engineering. I'm drawn to the field
                             because of its potential to create positive change and innovate solutions to complex problems.
                             My transition from a unionized carpentry trade to computer science reflects my strong drive for
-                            excellence and adaptability to new challenges.
+                            excellence and adaptability to new challenges. 
                         </p>
                     </div>
                 </div>
-                <div class intro="resume">
+                <div class="resume">
                     <div class="container">
                         <div class="top--title">resume</div>
                         <h2 class="title">Education & <span>Experience</span></h2>
@@ -67,16 +68,80 @@
                                 <p class="date">2021 - present</p>
                                 <h3>California State University, East Bay</h3>
                                 <p class="company">B.S. in Computer Science</p>
-
-
+                                <div class="circle"></div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class intro="projects"><div class="container"><div class="top--title">projects</div></div></div>
-                <div class intro="my--skills"><div class="container"><div class="top--title">my skills</div></div></div>
-                <div class intro="portfolio"><div class="container"><div class="top--title">portfolio</div></div></div> 
-                <div class intro="contact"><div class="container"><div class="top--title">contact</div></div></div> 
+                <div class="services">
+                    <div class="container">
+                        <div class="top--title">services</div>
+                        <h2 class="title">My <span>Specializations</span></h2>
+                        <div class="service">
+                            <h3>Application Development</h3>
+                            <p>
+                                I created digital products with unique ideas using Java
+                            </p>
+                            <a href="#" class="projects">3 Projects</a>
+                        </div>
+                    </div></div>
+                <div class="my--skills">
+                    <div class="container">
+                        <div class="top--title">my skills</div>
+                        <h2>My <span>Advantages</span></h2>
+                        <div class="skills">
+                            <div>
+                                <div class="skill">
+                                    <div class="skill--img--cover">
+                                        <img src="java.png" alt="" />
+                                    </div>
+                                </div>
+                                <p>Java</p>
+                            </div>
+                            <div>
+                                <div class="skill">
+                                    <div class="skill--img--cover">
+                                        <img src="react.png" alt="" />
+                                    </div>
+                                </div>
+                                <p>Java</p>
+                            </div>
+                            <div>
+                                <div class="skill">
+                                    <div class="skill--img--cover">
+                                        <img src="cpp.png" alt="" />
+                                    </div>
+                                </div>
+                                <p>Java</p>
+                            </div>
+                            <div>
+                                <div class="skill">
+                                    <div class="skill--img--cover">
+                                        <img src="python.png" alt="" />
+                                    </div>
+                                </div>
+                                <p>Java</p>
+                            </div>
+                            <div>
+                                <div class="skill">
+                                    <div class="skill--img--cover">
+                                        <img src="mysql.png" alt="" />
+                                    </div>
+                                </div>
+                                <p>Java</p>
+                            </div>
+                            <div>
+                                <div class="skill">
+                                    <div class="skill--img--cover">
+                                        <img src="java.png" alt="" />
+                                    </div>
+                                </div>
+                                <p>Java</p>
+                            </div>
+                        </div>
+                    </div></div>
+                <div class="portfolio"><div class="container"><div class="top--title">portfolio</div></div></div> 
+                <div class="contact"><div class="container"><div class="top--title">contact</div></div></div> 
                 </div>
             </div>
         </div>
