Update portfolio and skills section

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                         </p>
                         <p>
                             Actively engaged in options trading, demonstrating analytical skills, risk management, and strategic decision-making in financial markets.
-                        </p> 
-                        <p>Proud father of 2 daughters fostering a balance and fulfilling life outside of work.</p>
+                        </p>
                     </div>
                 <div class="about">
                     <div class="container">
@@ -93,55 +92,129 @@
                             <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
-                                        <img src="java.png" alt="" />
+                                        <span class="ri--java-fill"></span>
                                     </div>
+                                    <h3>Java</h3>
                                 </div>
-                                <p>Java</p>
                             </div>
                             <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
-                                        <img src="react.png" alt="" />
+                                        <span class="vscode-icons--file-type-cpp3"></span>
                                     </div>
+                                    <h3>C++</h3>
                                 </div>
-                                <p>Java</p>
-                            </div>
-                            <div>
-                                <div class="skill">
-                                    <div class="skill--img--cover">
-                                        <img src="cpp.png" alt="" />
-                                    </div>
-                                </div>
-                                <p>Java</p>
                             </div>
                             <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
                                         <img src="python.png" alt="" />
                                     </div>
+                                    <h3>Python</h3>
                                 </div>
-                                <p>Java</p>
                             </div>
                             <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
                                         <img src="mysql.png" alt="" />
                                     </div>
+                                    <h3>MySQL</h3>
                                 </div>
-                                <p>Java</p>
                             </div>
                             <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
-                                        <img src="java.png" alt="" />
+                                        <i class="ri-html5-line"></i>
                                     </div>
+                                    <h3>HTML</h3>
                                 </div>
-                                <p>Java</p>
+                            </div>
+                            <div>
+                                <div class="skill">
+                                    <div class="skill--img--cover">
+                                        <i class="ri-css3-line"></i>
+                                    </div>
+                                    <h3>CSS</h3>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="skill">
+                                    <div class="skill--img--cover">
+                                        <img src="js.png" alt="" />
+                                    </div>
+                                    <h3>Js</h3>
+                                </div>
                             </div>
                         </div>
                     </div></div>
-                <div class="portfolio"><div class="container"><div class="top--title">portfolio</div></div></div> 
-                <div class="contact"><div class="container"><div class="top--title">contact</div></div></div> 
+                <div class="portfolio"><div class="container">
+                    <div class="top--title">portfolio</div>
+                    <h2 class="title">Featured <span>Projects</span></h2>
+                    <div class="portfolio--cards">
+                        <a href="https://github.com/Josue-Castellanos/Project_OS" target="_blank" alt="">
+                            <div class="full--cover">
+                                <img src="#" alt="" />
+                                <div class="chips">
+                                    <div class="chip">C</div>
+                                    <div class="chip">Assembly</div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://github.com/Josue-Castellanos/FlashcardApp" target="_blank" alt="">
+                            <div class="full--cover">
+                                <img src="#" alt="" />
+                                <div class="chips">
+                                    <div class="chip">Java</div>
+                                    <div class="chip">XML</div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://github.com/Josue-Castellanos/Chess-Game-Mobile-App" target="_blank" alt="">
+                            <div class="full--cover">
+                                <img src="#" alt="" />
+                                <div class="chips">
+                                    <div class="chip">Java</div>
+                                    <div class="chip">XML</div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://github.com/Josue-Castellanos/CS-401-Group-7" target="_blank" alt="">
+                            <div class="full--cover">
+                                <img src="#" alt="" />
+                                <div class="chips">
+                                    <div class="chip">Java</div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#" target="_blank" alt="">
+                            <div class="full--cover">
+                                <img src="#" alt="" />
+                                <div class="chips">
+                                    <div class="chip">HTML</div>
+                                    <div class="chip">CSS</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div></div> 
+                <div class="contact"><div class="container">
+                    <div class="top--title">contact me</div>
+                    <h2 class="title">Let's work <span>Together!</span></h2>
+                    <div class="contact--card">
+                        <div class="contact--card">
+                            <i class="ri-mail-fill"></i>
+                            <p>infor@example.com</p>
+                        </div>
+                        <div class="contact--card">
+                            <i class="ri-mail-fill"></i>
+                            <p>infor@example.com</p>
+                        </div>
+                        <div class="contact--card">
+                            <i class="ri-mail-fill"></i>
+                            <p>infor@example.com</p>
+                        </div>
+                    </div>
+                </div></div> 
                 </div>
             </div>
         </div>
