need to finish contact section, hire me button, bootstrap cards, my specializations, logos, login

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                     </a>
                 </div>
                 <div class="btn"> Hire Me</div>
-                <div class="btn--line"> Download CV</div>
+                <a href="/img/Josue Castellanos Resume .pdf" download>
+                    <div class="btn--line"> Download CV</div>
+                </a>
             </div>
             <div class="main--content">
                 <div class="intro">
@@ -69,6 +71,18 @@
                                 <p class="company">B.S. in Computer Science</p>
                                 <div class="circle"></div>
                             </div>
+                            <div class="experience">
+                                <p class="date">2021 - present</p>
+                                <h3>California State University, East Bay</h3>
+                                <p class="company">B.S. in Computer Science</p>
+                                <div class="circle"></div>
+                            </div>
+                            <div class="experience">
+                                <p class="date">2021 - present</p>
+                                <h3>California State University, East Bay</h3>
+                                <p class="company">B.S. in Computer Science</p>
+                                <div class="circle"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -87,7 +101,7 @@
                 <div class="my--skills">
                     <div class="container">
                         <div class="top--title">my skills</div>
-                        <h2>My <span>Advantages</span></h2>
+                        <h2 class="title">My <span>Advantages</span></h2>
                         <div class="skills">
                             <div>
                                 <div class="skill">
