--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title> Josue Castellanos Portfolio</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="css/styles.css" />
         <link   
             href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css"
             rel="stylesheet"
@@ -72,17 +72,17 @@
                                 <div class="circle"></div>
                             </div>
                             <div class="experience">
+                                <p class="date"></p>
+                                <h3></h3>
+                                <p class="company"></p>
+                                <div class="circle"></div>
+                            </div>
+                            <!-- <div class="experience">
                                 <p class="date">2021 - present</p>
                                 <h3>California State University, East Bay</h3>
                                 <p class="company">B.S. in Computer Science</p>
                                 <div class="circle"></div>
-                            </div>
-                            <div class="experience">
-                                <p class="date">2021 - present</p>
-                                <h3>California State University, East Bay</h3>
-                                <p class="company">B.S. in Computer Science</p>
-                                <div class="circle"></div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                             <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
-                                        <img src="python.png" alt="" />
+                                        <img src="#" alt="" />
                                     </div>
                                     <h3>Python</h3>
                                 </div>
@@ -130,7 +130,7 @@
                             <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
-                                        <img src="mysql.png" alt="" />
+                                        <img src="#" alt="" />
                                     </div>
                                     <h3>MySQL</h3>
                                 </div>
@@ -154,7 +154,7 @@
                             <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
-                                        <img src="js.png" alt="" />
+                                        <img src="#" alt="" />
                                     </div>
                                     <h3>Js</h3>
                                 </div>
@@ -214,25 +214,48 @@
                 <div class="contact"><div class="container">
                     <div class="top--title">contact me</div>
                     <h2 class="title">Let's work <span>Together!</span></h2>
-                    <div class="contact--card">
+                    <div class="contact--cards">
                         <div class="contact--card">
                             <i class="ri-mail-fill"></i>
-                            <p>infor@example.com</p>
+                            <p>jcastellanos@horizon.csueastbay.edu</p>
                         </div>
                         <div class="contact--card">
-                            <i class="ri-mail-fill"></i>
-                            <p>infor@example.com</p>
-                        </div>
-                        <div class="contact--card">
-                            <i class="ri-mail-fill"></i>
-                            <p>infor@example.com</p>
+                            <i class="ri-phone-fill"></i>
+                            <p>+925 695 5977</p>
                         </div>
                     </div>
-                </div></div> 
+                    <div class="contact--form">
+                        <form action="" class="input--wrapper"  id="contact-form">
+                            <h5>Name</h5>
+                            <input class="input-field" type="text" name="user_name" id="name" 
+                            required placeholder="   Write your name" >
+
+                            <h5>Email Address</h5>
+                            <input class="input-field" type="email" name="user_email" id="email" 
+                            required placeholder="   Write your email" >
+
+                            <h5>Message</h5>
+                            <textarea class="textarea" name="user_message" id="message" 
+                            required placeholder="Write your message" ></textarea>
+                            <h4 id="contact-message"></h4>
+
+                            <button class="btn--line" type="submit">Send Message</button>
+                        </form>
+                    </div>
+                    </div>
+                </div> 
                 </div>
             </div>
         </div>
+
+        <!-- EMAIL JS -->
+        <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
+        <!-- TYPE JS -->
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-        <script src="script.js"></script>
+        <script src="js/type.js"></script>
+
+        <!-- CONTACT JS -->
+        <script src="js/contact.js"></script>
     </body>
 </html>
