Logos of Skills, cannot find a decent svg JS logo

--- a/index.html
+++ b/index.html
@@ -42,24 +42,23 @@
                             Future graduate from California State University seeking internship or entry-level position as software engineer.
                         </p>
                         <p>
-                            Actively engaged in options trading, demonstrating analytical skills, risk management, and strategic decision-making in financial markets.
-                        </p>
+                            My journey to pursue higher education amidst the COVID-19 pandemic, reignited my passion for
+                            learning and led me to discover my interest in software engineering. I'm drawn to the field
+                            because of its potential to create positive change and innovate solutions to complex problems.
+                            My transition from a unionized carpentry trade to computer science reflects my strong drive for
+                            excellence and adaptability to new challenges.                         </p>
                     </div>
-                <div class="about">
+                <!-- <div class="about">
                     <div class="container">
                         <div class="top--title">about</div>
                         <h2 class="title">
                             Math is my <span>Passion</span><br/> Engineering is my <span>Profession</span>
                         </h2>
                         <p>
-                            My journey to pursue higher education amidst the COVID-19 pandemic, reignited my passion for
-                            learning and led me to discover my interest in software engineering. I'm drawn to the field
-                            because of its potential to create positive change and innovate solutions to complex problems.
-                            My transition from a unionized carpentry trade to computer science reflects my strong drive for
-                            excellence and adaptability to new challenges. 
+                            
                         </p>
                     </div>
-                </div>
+                </div> -->
                 <div class="resume">
                     <div class="container">
                         <div class="top--title">resume</div>
@@ -106,7 +105,7 @@
                             <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
-                                        <span class="ri--java-fill"></span>
+                                        <img src="img/java-logo.svg" alt="" />
                                     </div>
                                     <h3>Java</h3>
                                 </div>
@@ -114,7 +113,7 @@
                             <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
-                                        <span class="vscode-icons--file-type-cpp3"></span>
+                                        <img src="img/cpp3-svgrepo-com.svg" alt="" />
                                     </div>
                                     <h3>C++</h3>
                                 </div>
@@ -122,7 +121,7 @@
                             <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
-                                        <img src="#" alt="" />
+                                        <img src="img/python-127-svgrepo-com.svg" alt="" />
                                     </div>
                                     <h3>Python</h3>
                                 </div>
@@ -130,7 +129,7 @@
                             <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
-                                        <img src="#" alt="" />
+                                        <img src="img/mysql-svgrepo-com.svg" alt="" />
                                     </div>
                                     <h3>MySQL</h3>
                                 </div>
@@ -138,7 +137,7 @@
                             <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
-                                        <i class="ri-html5-line"></i>
+                                        <img src="img/html5-logo-svgrepo-com.svg" alt="" />
                                     </div>
                                     <h3>HTML</h3>
                                 </div>
@@ -146,19 +145,19 @@
                             <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
-                                        <i class="ri-css3-line"></i>
+                                        <img src="img/css3-svgrepo-com.svg" alt="" />
                                     </div>
                                     <h3>CSS</h3>
                                 </div>
                             </div>
-                            <div>
+                            <!-- <div>
                                 <div class="skill">
                                     <div class="skill--img--cover">
                                         <img src="#" alt="" />
                                     </div>
                                     <h3>Js</h3>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div></div>
                 <div class="portfolio"><div class="container">
@@ -167,7 +166,7 @@
                     <div class="portfolio--cards">
                         <a href="https://github.com/Josue-Castellanos/Project_OS" target="_blank" alt="">
                             <div class="full--cover">
-                                <img src="#" alt="" />
+                                <img src="img/Screenshot_6.png" alt="" />
                                 <div class="chips">
                                     <div class="chip">C</div>
                                     <div class="chip">Assembly</div>
@@ -176,7 +175,7 @@
                         </a>
                         <a href="https://github.com/Josue-Castellanos/FlashcardApp" target="_blank" alt="">
                             <div class="full--cover">
-                                <img src="#" alt="" />
+                                <img src="img/Screenshot_10.png" alt="" />
                                 <div class="chips">
                                     <div class="chip">Java</div>
                                     <div class="chip">XML</div>
@@ -185,16 +184,16 @@
                         </a>
                         <a href="https://github.com/Josue-Castellanos/Chess-Game-Mobile-App" target="_blank" alt="">
                             <div class="full--cover">
-                                <img src="#" alt="" />
+                                <img src="img/Screenshot_1.png" alt="" />
                                 <div class="chips">
                                     <div class="chip">Java</div>
                                     <div class="chip">XML</div>
                                 </div>
                             </div>
                         </a>
-                        <a href="https://github.com/Josue-Castellanos/CS-401-Group-7" target="_blank" alt="">
+                        <a href="https://github.com/Josue-Castellanos/Client-Server_Project" target="_blank" alt="">
                             <div class="full--cover">
-                                <img src="#" alt="" />
+                                <img src="img/Screenshot_4.png" alt="" />
                                 <div class="chips">
                                     <div class="chip">Java</div>
                                 </div>
@@ -202,7 +201,7 @@
                         </a>
                         <a href="#" target="_blank" alt="">
                             <div class="full--cover">
-                                <img src="#" alt="" />
+                                <img src="img/Screenshot_9.png" alt="" />
                                 <div class="chips">
                                     <div class="chip">HTML</div>
                                     <div class="chip">CSS</div>
