--- a/index.html
+++ b/index.html
@@ -76,16 +76,10 @@
                                 <p class="company"></p>
                                 <div class="circle"></div>
                             </div>
-                            <!-- <div class="experience">
-                                <p class="date">2021 - present</p>
-                                <h3>California State University, East Bay</h3>
-                                <p class="company">B.S. in Computer Science</p>
-                                <div class="circle"></div>
-                            </div> -->
                         </div>
                     </div>
                 </div>
-                <div class="services">
+                <!-- <div class="services">
                     <div class="container">
                         <div class="top--title">services</div>
                         <h2 class="title">My <span>Specializations</span></h2>
@@ -96,7 +90,8 @@
                             </p>
                             <a href="#" class="projects">3 Projects</a>
                         </div>
-                    </div></div>
+                    </div>
+                </div> -->
                 <div class="my--skills">
                     <div class="container">
                         <div class="top--title">my skills</div>
@@ -160,7 +155,7 @@
                             </div> -->
                         </div>
                     </div></div>
-                <div class="portfolio"><div class="container">
+                <div class="portfolio" id="portfolio"><div class="container">
                     <div class="top--title">portfolio</div>
                     <h2 class="title">Featured <span>Projects</span></h2>
                     <div class="portfolio--cards">
